
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {char* username; char* cyphertext; char* plaintext; } ;


 int nAccounts ;
 TYPE_1__** pAccounts ;
 int printf (char*,...) ;

void outPasswds()
{
 int x;
 printf(
  "/----------------------------\\\n"
  "| trillian-ini-decrypt       |\n"
  "| By The Coeus Group         |\n"
  "| http://www.coeus-group.com |\n"
  "\\----------------------------/\n");
 printf("Found %d accounts.\n\n", nAccounts);
 for ( x = 0 ; x < nAccounts ; x++ )
 {
  printf( "Username:           : %s\n"
   "Password (encrypted): %s\n"
   "Password (decrypted): %s\n\n",
   pAccounts[x]->username,
   pAccounts[x]->cyphertext,
   pAccounts[x]->plaintext
  );
 }
}
